--- a/Hospitalvisittime/app/src/main/res/values/strings.xml
+++ b/Hospitalvisittime/app/src/main/res/values/strings.xml
@@ -1,3 +1,38 @@
 <resources>
     <string name="app_name">Hospitalvisittime</string>
+
+
+    <string-array name="film_genre">
+        <item>會員專區</item>
+        <item>書本分類</item>
+        <!--<item>Drama</item>-->
+        <!--<item>Musical</item>-->
+        <!--<item>Thriller</item>-->
+    </string-array>
+
+    <string-array name="actionFilms">
+        <item>會員登入</item>
+        <item>會員註冊</item>
+        <item>忘記密碼</item>
+        <item>修改密碼</item>
+    </string-array>
+
+    <string-array name="musicals">
+        <item>文學</item>
+        <item>文財經企管</item>
+        <item>生活風格</item>
+        <item>飲食料理</item>
+        <item>心理勵志</item>
+        <item>醫療保健</item>
+        <item>旅遊</item>
+        <item>宗教命理</item>
+        <item>教育/親子教養</item>
+        <item>童書</item>
+        <item>漫畫</item>
+        <item>語言學習</item>
+        <item>考試用書</item>
+        <item>電腦資訊</item>
+        <item>專業/教科書/政府出版本</item>
+        <item>外文書</item>
+    </string-array>
 </resources>
